--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>I am a title! Yeah!</title>
   </head>
   <body>
+    <h1>The greatest header in the world!</h1>
     Hello there, awesome person!
   </body>
 </html>
