Adding an image

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     Hello there, awesome person!
+    <img src="https://s1.1zoom.ru/b5050/158/354748-admin_3840x2400.jpg">
   </body>
 </html>
