Add image between body tag

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>The greatest header in the world!</h1>
     Hello there, awesome person!
+    <img src="https://s1.1zoom.ru/b5050/158/354748-admin_3840x2400.jpg">
   </body>
 </html>
